CHANGED List to Set in BestellungDTO and uebersicht.html

--- a/src/main/resources/templates/uebersicht.html
+++ b/src/main/resources/templates/uebersicht.html
@@ -5,11 +5,11 @@
     <title>Rechnungen</title>
 </head>
 <body>
-    <ul th:each="bestellung : ${bestellungen} th:remove="all-but-first">
-        <li><a th:href="@{/details(bestellung=${bestellung.id})}" href="#">
-            <span th:text="${bestellung.id}">1234</span>
-            <span th:text="${bestellung.kunde.name}">Max Muster GmbH</span>
-            <span th:text="${bestellung.datum}">01.01.2000</span>
+    <ul th:each="bestellung : ${bestellungen}" th:remove="all-but-first">
+        <li><a th:href="@{/details(bestellung=${bestellung.getNr()})}" href="#">
+            <span th:text="${bestellung.getNr()}">1234</span>
+            <span th:text="${bestellung.getKunde()}">Max Muster GmbH</span>
+            <span th:text="${bestellung.getDatum().toString()}">01.01.2000</span>
         </a>
 
         </li>
