--- a/src/main/resources/templates/verkaufs_abschluss.html
+++ b/src/main/resources/templates/verkaufs_abschluss.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <title>Verkauft</title>
 </head>
-<body>
-    <span>Die gewählten Waren wurden erfolgreich Verkauft!</span>
-</body>
+    <body>
+        <div style="text-align: center;">
+            <span>Die gewählten Waren wurden erfolgreich Verkauft!</span>
+        </div>
+    </body>
 </html>
